<resources>
    <string name="app_name">Stories</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_welcome_page">Welcome to Stories!</string>
    <string name="message_welcome_page">Let\'s share your thought with others and start making new friends!</string>
    <string name="title_signup_page">Let\'s create your account!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Let\'s get Started!</string>
    <string name="message_login_page">Please enter your account</string>
    <string name="logout">Logout</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_error">Password must not be less than 8 characters</string>
    <string name="email_hint">Enter your email</string>
    <string name="email_error">Invalid Email Address</string>
    <string name="name_hint">Enter your name</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="not_found_message">Oops!\nStories Not Found !??</string>
    <string name="fab_content_desc">Add New Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="description_hint">Your Description</string>
    <string name="description_error">Description cannot be empty</string>
    <string name="empty_warning">No Image Selected</string>
    <string name="error_addtional_warning">Please Try Again!</string>
    <string name="language">Language</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_message">Are you want to logout?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="splash_message">Place to share your story</string>
    <string name="Map">Google Map</string>
    <string name="title_activity_maps">Stories Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Try Again</string>
    <string name="Location_input_desc">Set Your Location as Story Location?</string>
    <string name="location_not_found_message">Location Not Found.\nPlease Try Again!</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
</resources>